--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <h1>MY WEBSITE</h1>
             <nav>
                 <ul>
-                   <li><a href="#about">自己紹介</a></li>
+                   <li><a href="#about">連絡先</a></li>
                    <li><a href="#services">アプリ</a></li>
                    <li><a href="#contact">お問い合わせ</a></li>
                 </ul>
@@ -27,7 +27,7 @@
                 <p>https://oshi-photo-app.vercel.app/</p>
             </section>
             <section id="contact">
-                <h2>お問い合わせ</h2>
+                <h2>連絡先<h2>
                 <p>@mochi338_</p>
             </section>
         </main>
