--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </section>
             <section id="contact">
                 <h2>連絡先<h2>
-                <p>@mochi338_</p>
+                <p>amabno599@gmail.com</p>
             </section>
         </main>
         <footer>
